--- a/css/qinwei-zhu.webflow.css
+++ b/css/qinwei-zhu.webflow.css
@@ -233,20 +233,17 @@
 }
 
 .proj-section-title {
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin-top: 100px;
+  margin-bottom: 40px;
   margin-left: 0px;
   padding-left: 7%;
   font-family: 'Open Sans', sans-serif;
-  font-size: 17px;
-  font-weight: 300;
+  font-size: 40px;
+  font-weight: 100;
   text-align: left;
+    color: #999;
 }
 
-.proj-section-title{
-    font-weight: 400;
-    color: ＃
-}
 
 .proj-text {
   margin-bottom: 25px;
@@ -271,7 +268,7 @@
   padding-left: 7%;
   border-left-style: none;
   font-family: Montserrat, sans-serif;
-  font-size: 25px;
+  font-size: 40px;
   line-height: 32px;
   font-weight: 700;
   text-align: left;
